--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						</p>
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major fa-camera-retro"></span>
+								<span class="icon solid major"><img src="C:\Users\alexis\Documents\code\JirehSite\images\calendar.ico" alt="" width="40" height="40"/></span>
 								<h3>Flexible Schedule</h3>
 							</li>
 							<li>
