--- a/index.html
+++ b/index.html
@@ -74,22 +74,24 @@
 							</ul>
 
 						</p>
+						<!-- <a href="https://www.flaticon.com/free-icons/online-payment" title="online payment icons">Online payment icons created by srip - Flaticon</a> -->
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major"><img src="C:\Users\alexis\Documents\code\JirehSite\images\calendar.ico" alt="" width="40" height="40"/></span>
 								<h3>Flexible Schedule</h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-pencil-alt"></span>
+								<span class="icon solid major "><img src="C:\Users\alexis\Documents\code\JirehSite\images\class.ico"  alt="" width="40" height="40"/></span>
 								<h3> classes para todas edades </h3>
 								<h3></h3>
 							</li>
 							<li>
-								<span class="icon solid major fa-code"></span>
-								<h3>Flexible Payments!</h3>
+								<span class="icon solid major"> <img src="C:\Users\alexis\Documents\code\JirehSite\images\online-banking.ico" alt="" width="40" height="40"/></span>
+								<h3>Flexible Payment plans!</h3>
 							</li>
+							<!-- <a href="https://www.flaticon.com/free-icons/guitar-player" title="guitar player icons">Guitar player icons created by Freepik - Flaticon</a>-->
 							<li>
-								<span class="icon solid major fa-coffee"></span>
+								<span class="icon solid major"> <img  src="C:\Users\alexis\Documents\code\JirehSite\images\guitar-player.ico" alt="" width="40" height="40"/> </span>
 								<h3>Maestros Educados!</h3>
 							</li>
 						</ul>
