submit form to email
trying mailto action to send email

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<form method="post" action="#">
+					<form action="mailto:alexisrodriguez830@yahoo.com"
+					method="post" action="#">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
