--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>Send us an email</h2>
 					</header>
-					<form action="mailto:alexisrodriguez830@yahoo.com"
+					<form action="mailto:alexisrodriguez830@yahoo.com" enctype="text/plain"
 					method="post" action="#">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -160,7 +160,7 @@
 							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 							<div class="col-12">
 								<ul class="actions special">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
+									<li><input type="submit" value="Send Email" class="primary" /></li>
 								</ul>
 							</div>
 						</div>
