--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title> 
-			Highlights by HTML5 UP</title>
+			Escuela De Musica Jireh LLC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,10 +15,13 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<section id="header">
+			<section id="header"   class="major">
+				<div class="header" id="myHeader">
+					<h2><a href="tel:6024340670"> (602) 434-0670</a></h2>
+				  </div>
 				<header class="major">
-					<h1><img src="C:\Users\alexis\Documents\references\JirehLogo2.JPG"></h1>
-					<p>Future Escuela De Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
+					<h1><img src="C:\Users\alexis\Documents\code\JirehSite\images\JirehLogo2.JPG" /></h1>
+					<p>Bienvenido <br> a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
@@ -78,7 +81,7 @@
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major"><img src="C:\Users\alexis\Documents\code\JirehSite\images\calendar.ico" alt="" width="40" height="40"/></span>
-								<h3>Flexible Schedule</h3>
+								<h3>Flexibilidad de horario</h3>
 							</li>
 							<li>
 								<span class="icon solid major "><img src="C:\Users\alexis\Documents\code\JirehSite\images\class.ico"  alt="" width="40" height="40"/></span>
@@ -152,7 +155,7 @@
 					<header class="major">
 						<h2>Send us an email</h2>
 					</header>
-					<form action="mailto:alexisrodriguez830@yahoo.com" enctype="text/plain"
+					<form action="mailto:bjazzjireh@gmail.com" enctype="text/plain"
 					method="post" action="#">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
