icon file call updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<h2><a href="tel:6024340670"> (602) 434-0670</a></h2>
 				  </div>
 				<header class="major">
-					<h1><img src="C:\Users\alexis\Documents\code\JirehSite\images\JirehLogo2.JPG" /></h1>
+					<h1><img src=".\images\JirehLogo2.JPG" /></h1>
 					<p>Bienvenido <br> a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
 				</header>
 				<div class="container">
@@ -80,21 +80,21 @@
 						<!-- <a href="https://www.flaticon.com/free-icons/online-payment" title="online payment icons">Online payment icons created by srip - Flaticon</a> -->
 						<ul class="icons-grid">
 							<li>
-								<span class="icon solid major"><img src="C:\Users\alexis\Documents\code\JirehSite\images\calendar.ico" alt="" width="40" height="40"/></span>
+								<span class="icon solid major"><img src=".\images\calendar.ico" alt="" width="40" height="40"/></span>
 								<h3>Flexibilidad de horario</h3>
 							</li>
 							<li>
-								<span class="icon solid major "><img src="C:\Users\alexis\Documents\code\JirehSite\images\class.ico"  alt="" width="40" height="40"/></span>
+								<span class="icon solid major "><img src=".\images\class.ico"  alt="" width="40" height="40"/></span>
 								<h3> classes para todas edades </h3>
 								<h3></h3>
 							</li>
 							<li>
-								<span class="icon solid major"> <img src="C:\Users\alexis\Documents\code\JirehSite\images\online-banking.ico" alt="" width="40" height="40"/></span>
+								<span class="icon solid major"> <img src=".\images\online-banking.ico" alt="" width="40" height="40"/></span>
 								<h3>Flexible Payment plans!</h3>
 							</li>
 							<!-- <a href="https://www.flaticon.com/free-icons/guitar-player" title="guitar player icons">Guitar player icons created by Freepik - Flaticon</a>-->
 							<li>
-								<span class="icon solid major"> <img  src="C:\Users\alexis\Documents\code\JirehSite\images\guitar-player.ico" alt="" width="40" height="40"/> </span>
+								<span class="icon solid major"> <img  src=".\images\guitar-player.ico" alt="" width="40" height="40"/> </span>
 								<h3>Maestros Educados!</h3>
 							</li>
 						</ul>
