fix header stuck to top
line 3009

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 		<!-- Header -->
 			<section id="header"   class="major">
-				<div class="header" id="myHeader">
-					<h2><a href="tel:6024340670"> (602) 434-0670</a></h2>
-				  </div>
+				<br>
 				<header class="major">
-					<h1><img src=".\images\JirehLogo2.JPG" /></h1>
-					<p>Bienvenido <br> a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
+					<h1><img src=".\images\JirehLogo2.PNG" width="80%" height="55%" /></h1>
+					<p>Bienvenido 
+						 a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
 				</header>
+				<br> <br/>
 				<div class="container">
 					<ul class="actions special">
 						<li><a href="#one" class="button primary scrolly">Begin</a></li>
