instrument section update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header"   class="major">
 				<br>
 				<header class="major">
-					<h1><img src=".\images\JirehLogo2.PNG" width="80%" height="55%" /></h1>
+					<h1><img src=".\images\JirehLogo2.PNG" width="100%" height="75%" /></h1>
 					<p>Bienvenido 
 						 a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
 				</header>
@@ -39,9 +39,13 @@
 							<h2>Que Instrumentos Ofrecemos? </h2>
 						</header>
 						<p>
-							<li>Guitarra, Requinto, Acordeón, </li>
-							<li>Piano, Batería, Guitarra eléctrica,</li>
-							<li>Requite, Ukelele, Trompeta, Saxofón, Tuba y mas! </li>  
+							<h3> acordeón de botones y teclas!</h2>
+							<li>Batería, congas, Bingos, Timbales,</li>
+							<li>Saxofón, Trompeta , Clarinete, Tuba </li>
+							 
+							<h3><li>Falta su instrumento deseado? </li> 
+								Contactenos por texto o llamada 
+								<br> <a href="tel:6024340670">602-434-0670 </a> </h2> 
 						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
