html css update

--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 						</header>
 						<p>
 							<h3> acordeón de botones y teclas!</h2>
+							<li> Guitarra, Piano, Violin, Cello, Bajo</li>
 							<li>Batería, congas, Bingos, Timbales,</li>
 							<li>Saxofón, Trompeta , Clarinete, Tuba </li>
-							 
+							 <br>
 							<h3><li>Falta su instrumento deseado? </li> 
 								Contactenos por texto o llamada 
-								<br> <a href="tel:6024340670">602-434-0670 </a> </h2> 
+								<br> <a href="tel:6024340670">(602) 434-0670 </a> </h2> 
 						</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
