found h2 backround color
line 2837

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header"   class="major">
 				<br>
 				<header class="major">
-					<h1><img src=".\images\JirehLogo2.PNG" width="100%" height="75%" /></h1>
+					<h1><img src=".\images\logo-jireh-2.png" width="100%" height="75%" /></h1>
 					<p>Bienvenido 
 						 a Escuela de Musica Jireh <!-- a href="http://html5up.net">HTML5 UP</a> --></p>
 				</header>
