--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 						</header>
 						<p>
 							<h3> acordeón de botones y teclas!</h2>
-							<li> Guitarra, Piano, Violin, Cello, Bajo</li>
-							<li>Batería, congas, Bingos, Timbales,</li>
+							<li> Guitarra, Requinto. Sierreno, Piano,</li>
+							<li> Violin, Cello, Bajo, Ukelele, Mandolina</li>
 							<li>Saxofón, Trompeta , Clarinete, Tuba </li>
+							<li> Bateria, Congas, Bongos, Timbales</li>
 							 <br>
 							<h3><li>Falta su instrumento deseado? </li> 
 								Contactenos por texto o llamada 
@@ -114,12 +115,11 @@
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>One more thing</h2>
-						</header><h1>Estos son nuestro 3 principales clientes:</h2>
-						<p><li>1.	El cliente Sierreno, que le gusta el requinto, música banda, corridos. Música Mexicana. Ya sea en la guitarra o el acordeón. Nadie mas ensena en Phoenix y sus alrededores como Jireh. </li>
-							<li>2.	El cliente cristiano. Nos buscan por que les podemos ensenar música cristiana y podemos hablar su lenguaje como cristianos y entendemos la necesidad que tiene de aprender a tocar canciones de alabanza y adoración.</li>
-							<li>3.	El cliente que nos trae a sus hijos chiquitos. Somos una opción para los papas que quieren que sus hijos pequeños exploren y descubran si realmente les gusta la música o simplemente como una actividad extra.
-</li>
+							<h2>Nuestro Director</h2>
+						</header><h1>Jose A. Rodriguez</h2>
+						<p><li>Experencia </li>
+							<li>foundation date</li>
+							<li>quote</li>
 							</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
