--- a/html2.html
+++ b/html2.html
@@ -136,9 +136,9 @@
 							Classes Monday to Saturday
 						</li>
 						<li>
-							Missed Classes are not void and can be Rebooked
+							Missed classes are not void. Just rebook!
 						</li>
-						<li>Learn to Play any music genre!
+						<li>Learn to play any music genre!
 						
 						</li>
 					</p>
