--- a/html2.html
+++ b/html2.html
@@ -84,7 +84,7 @@
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Three 
 			<section id="three" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
@@ -99,7 +99,7 @@
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
-			</section>
+			</section>-->
 <!-- id four copied dives 115-126 from 101-113-->
 			<section id="Four" class="main special">
 				<div class="container">
@@ -156,7 +156,7 @@
 							<header class="major">
 								<h2>Our Location:<br> 57th ave & Camelback <br/>
 								</h2>
-							<iframe id="map" class="image fit" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6697002615215!2d-112.1826784!3d33.5099697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b134873eb6035%3A0xda5bcc2b2aaf79e0!2sEscuela%20De%20Musica%20JIREH%20-%20Music%20School!5e0!3m2!1sen!2sus!4v1658551211354!5m2!1sen!2sus" 
+							<iframe id="map" class="container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6697002615215!2d-112.1826784!3d33.5099697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b134873eb6035%3A0xda5bcc2b2aaf79e0!2sEscuela%20De%20Musica%20JIREH%20-%20Music%20School!5e0!3m2!1sen!2sus!4v1658551211354!5m2!1sen!2sus" 
 								width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 							
 							
