--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				</div>
 			</section>
 
-		<!-- Three -->
+		<!-- Three 
 			<section id="three" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
@@ -104,7 +104,7 @@
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
-			</section>
+			</section>-->
 <!-- id four copied dives 115-126 from 101-113-->
 			<section id="Four" class="main special">
 				<div class="container">
