--- a/html2.html
+++ b/html2.html
@@ -25,7 +25,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+				<!--	<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span> -->
 					<div class="content">
 						<header class="major">
 							<h2>Instruments </h2>
@@ -103,7 +103,7 @@
 <!-- id four copied dives 115-126 from 101-113-->
 			<section id="Four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<!-- <span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span> -->
 					<div class="content">
 						<header class="major">
 							<h2>Benefits of studying at Jireh </h2>
