--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<!-- One -->
 			<section id="one" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+				<!--	<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>-->
 					<div class="content">
 						<header class="major">
 							<h2>Que Instrumentos Ofrecemos? </h2>
@@ -108,24 +108,23 @@
 <!-- id four copied dives 115-126 from 101-113-->
 			<section id="Four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+				<!--	<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>-->
 					<div class="content">
 						<header class="major">
 							<h2>Beneficios que te da Jireh</h2>
 						</header>
 						<p><li>
-							Flexibilidad de horario. (El alumno puede cambiar su horario de clase en caso que los horarios de su trabajo y/o escuela cambien)
+							Mantenga control sobre su orario
 						</li>
 						<li>
-							Clases de Lunes a Sabado (Ofrecemos amplio horario donde pueden elegir el que mas les conviene, no te forzamos a un solo horario.)	
+							Clases Lunes a Sabado	
 						</li>
-						<Li>Elige los días y el horario. (Solo Jireh te deja elegir el día de tu clase y tu horario, no tienes que ajustarte al horario de alguien mas)</Li>
+						<Li>Si falta, no pierde su hora! Solo tiene que volver a reservar
+						</Li>
 						<li>
-							Si faltas, no pierdes tu clase. Solo reagendala.
+							Aprenda cualquier instrumento o tipo de musica
 						</li>
 						<li>Te ensenan las canciones del genero musical de tu gusto
-						
-
 						</li>
 					</p>
 					</div>
