added privacy policy as html3

--- a/html2.html
+++ b/html2.html
@@ -173,7 +173,9 @@
 						<li><a href="tel:602-434-0670" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; 2022 Reserved</li><li></li><li> <a href="tel:6024340670">Numero de Director <br> (click here)</br> </a></li>
+						<li>&copy; 2022 Reserved</li>
+						<li></li><li> <a href="tel:6024340670">Numero de Director <br> (click here)</br> </a></li>
+						<li></li><li> <a href=".\html3.html">Privacy Policies <br> (click here)</br> </a></li>
 					</ul ><a href="mailto:alexisrodriguez830@yahoo.com">Design: Jireh Digital Multimedia services</a>
 				</footer>
 			</section>
