--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+     <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">-->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
@@ -307,14 +307,14 @@
 			</section>
 
 
-
 			<section id="footer">
 			
 
 				<section id="Four" class="main special">
 					
 				</section>
-				<footer>
+				
+            <footer>
 					<ul class="icons">
 						<li><a href="https://www.facebook.com/jirehphx/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/escuela_de_musica_jireh_llc/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
