language error correction

--- a/html2.html
+++ b/html2.html
@@ -52,7 +52,7 @@
 					<div class="content">
 						<header class="major">
 							<img class="image fit " src=".\images\schoolclose.JPG"  alt="" />
-							<h2><br>Nuestro Horario!</h2>
+							<h2><br>Open 6 Days a Week!</h2>
 						</header>
 						<p><img class="image fit " src=".\images\hours2.JPG"  alt="" />
 							
