--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Send us an email</h2>
+						<h2>Contactenos Por Email</h2>
 					</header>
 					<form action="mailto:bjazzjireh@gmail.com" enctype="text/plain"
 					method="post" action="#">
