whats app button

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 				</section>
 				<footer>
 					<ul class="icons">
+						<li> <a href="https://api.whatsapp.com/send?phone=6024340670" class="icon brands alt fa fa-whatsapp"> <span class="label">Whatsapp</span></a> </li>
 						<li><a href="https://www.facebook.com/jirehphx/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/escuela_de_musica_jireh_llc/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="tel:602-434-0670" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
