--- a/html2.html
+++ b/html2.html
@@ -2,10 +2,11 @@
 
 <html>
 	<head>
-		<title> Escuela De Musica Jireh LLC</title>
+		<title>Escuela De Musica Jireh Az Accordion Bass Guitar School</title>
 			<link rel="shortcut icon" type="image/png" href="./images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="keywords" content=" Az, Arizona, Glendale, Guitar, School, Learn, Accordion, Bass, Bass Guitar, Piano, Cheap, Flexible Schedule,violin, cello, Bass, Ukelele, Mandolin, Saxophone, Trumpet, Clarinet, Tuba, Drums, Congas, Bongos, KettleDrums">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
