--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title> Escuela De Musica Jireh LLC</title>
+		<title>Escuela De Musica Jireh LLC Acordeon Bajo Guitarra Glendale</title>
 		<link rel="shortcut icon" type="image/png" href="./images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name=" keywords" content="Jireh, Acordeon, Guitarra, bajo, Escuela de Musica Jireh, Musica, Jireh Glendale, classes de canto phoenix az, music stores near me, music store, acordion, music classes, classes de musica, az guitar school, glendale, accordeones, classes de canto cerca de mi, music, lessons, classes, musica, Cristiano," />
+		<meta name=" keywords" content="Classes de musica, Baratas, Cheap, Acordeon, Guitarra, bajo, Requinto, Piano, Violin, cello, bajo, Ukelele, Mandolina, Saxofón, Trompeta, Clarinete, tuba, bateria, congas, bongos, timbales Escuela de Musica Jireh, Musica, Jireh Glendale, classes de canto phoenix az, music stores near me, music store, acordion " />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
