added tik tok link

--- a/html2.html
+++ b/html2.html
@@ -172,8 +172,9 @@
 						<li> <a href="https://api.whatsapp.com/send?phone=6024340670" class="icon brands alt fa fa-whatsapp"> <span class="label">Whatsapp</span></a> </li>
 						<li><a href="https://www.facebook.com/jirehphx/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/escuela_de_musica_jireh_llc/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.tiktok.com/@betitojazzrodriguez" class="icon brands alt fab fa-tiktok"><span class="label">Tik Tok</span></a></li>
 						<li><a href="tel:602-434-0670" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
+						</ul>
 					<ul class="copyright">
 						<li>&copy; 2022 Reserved</li>
 						<li></li><li> <a href="tel:6024340670">Numero de Director <br> (click here)</br> </a></li>
