--- a/html2.html
+++ b/html2.html
@@ -129,6 +129,27 @@
 
 
 
+			<section id="footer">
+				<!--<div class="container">
+					<header class="major">
+						<h2>Send us an email</h2>
+					</header>
+					<form action="mailto:bjazzjireh@gmail.com" enctype="text/plain"
+					method="post" action="#">
+						<div class="row gtr-uniform">
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+							<div class="col-12">
+								<ul class="actions special">
+									<li><input type="submit" value="Send Email" class="primary" /></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</div>
+			-->
+
 				<section id="Four" class="main special">
 					<div class="container">
 						
