title change for seo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Escuela De Musica Jireh LLC Acordeon Bajo Guitarra Glendale</title>
+		<title>Escuela De Musica Jireh Aprende Tocar Acordeon Bajo Guitarra Glendale AZ</title>
 		<link rel="shortcut icon" type="image/png" href="./images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
