for succesful. now secure on google
instead of going through an html form, we use onclick to direct message through script.js. google considers this secure and does not trigger a red flag

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 					</header>
 					
 						<div class="row gtr-uniform">
-							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="cname" placeholder="Name" /></div>
-							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="cemail" placeholder="Phone or Email" /></div>
-							<div class="col-12"><textarea name="message" id="cmessage" placeholder="Message" rows="4"></textarea></div>
+							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="cname" placeholder="Su Nombre" /></div>
+							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="cemail" placeholder="Email o Numero Cellular" /></div>
+							<div class="col-12"><textarea name="message" id="cmessage" placeholder="Escriba Su Mensaje Aqui" rows="4"></textarea></div>
 							<div class="col-12">
 								<ul class="actions special">
-									<li><input type="submit" value="Send Email" class="primary" onclick="sendMail()" /></li>
+									<li><input type="submit" value="Abrir y Enviar Email" class="primary" onclick="sendMail()" /></li>
 								</ul>
 							</div>
 						</div>
