--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</li>
 							<li>
 								<span class="icon solid major"> <img src=".\images\online-banking.ico" alt="" width="40" height="40"/></span>
-								<h3>Flexible Payment plans!</h3>
+								<h3>Ofrecemos Becas y Ayuda Finaciera!</h3>
 							</li>
 							<!-- <a href="https://www.flaticon.com/free-icons/guitar-player" title="guitar player icons">Guitar player icons created by Freepik - Flaticon</a>-->
 							<li>
