--- a/html2.html
+++ b/html2.html
@@ -72,7 +72,7 @@
 							</li>
 							<li>
 								<span class="icon solid major"> <img src=".\images\online-banking.ico" alt="" width="40" height="40"/></span>
-								<h3>Flexible Payment plans!</h3>
+								<h3>We offer Grants & flexible payment plans!</h3>
 							</li>
 							
 							<li>
@@ -134,7 +134,7 @@
 			<section id="footer">
 				<div class="container">
 				   <header class="major">
-					   <h2>Contactenos Por Email</h2>
+					   <h2>Contact Us By Email</h2>
 				   </header>
 				   
 					   <div class="row gtr-uniform">
