--- a/faq.html
+++ b/faq.html
@@ -257,7 +257,7 @@
 							<div class="footer-content">
 								<h5>Contact Our Director:</h5>
 								<p>602-434-0670 <br/>
-									Bjazzjireh@Gmail.com
+									BjazzJireh@Gmail.com
 								</p>
 							</div>
 						</div>
