--- a/English.html
+++ b/English.html
@@ -70,7 +70,7 @@
 					<li><label>Address:</label> 5720 W Camelback rd,<br>
 						Glendale, Az 85301</li>
 					<li><label>Phone:</label>602-434-0670</li>
-					<li><label>Email:</label> bjazzjireh@gmail.com </li>
+					<li><label>Email:</label> BjazzJireh@Gmail.com </li>
 				</ul>
 				<!-- SOCIAL ICONS -->
 				<ul class="search-social search-social-2">
@@ -391,7 +391,7 @@
 						<div class="footer-content">
 							<h5>Contact Our Director:</h5>
 							<p>602-434-0670 <br/>
-								Bjazzjireh@Gmail.com
+								BjazzJireh@Gmail.com
 							</p>
 						</div>
 					</div>
