--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<!--<p class="white">
 					¡Descubre las habilidades que puedes aprender con nosotros a continuación!
 				</p> -->
-				<p> <a href="contact.html" class="view-more more-white margin-t24">Contactar Ahora</a> <a href="English.html" class="view-more more-white margin-t24">English Site</a></p>
+				<p> <a href="contact.html" class="view-more more-white margin-t24">Contactar</a> <a href="English.html" class="view-more more-white margin-t24">English Site</a></p>
 				
 			</div>
 			<!-- /container-->
