--- a/English.html
+++ b/English.html
@@ -33,6 +33,7 @@
 							<ul class="sub-menu">
 								<li class="menu-item"><a href="index.html">Español</a></li>
 								<li class="menu-item current-menu-item"><a href="English.html">English</a></li>
+								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
@@ -119,6 +120,7 @@
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="index.html">Español</a></li>
 										<li class="menu-item current-menu-item"><a href="English.html">English</a></li>
+										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 									</ul>
 								</li>
 								
