--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -33,10 +33,11 @@
 							<ul class="sub-menu">
 								<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
 								<li class="menu-item"><a href="English.html">English</a></li>
+                        <li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
-							<a href="#">Páginas</a>
+							<a href="#">Preguntas</a>
 							<ul class="sub-menu">
 							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
 								<li class="menu-item"><a href="services.html">Services</a></li>-->
@@ -120,11 +121,12 @@
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="index.html">Español</a></li>
 										<li class="menu-item current-menu-item"><a href="English.html">English</a></li>
+                              <li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 									</ul>
 								</li>
 								
 								<li class="menu-item menu-item-has-children">
-									<a href="#">Páginas</a>
+									<a href="#">Preguntas</a>
 									<ul class="sub-menu">
 							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
 								<li class="menu-item"><a href="services.html">Services</a></li>-->
