--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 							<ul class="sub-menu">
 								<li class="menu-item"><a href="index.html">Español </a></li>
 								<li class="menu-item"><a href="English.html">English</a></li>
+                        <li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 								
 							</ul>
 						</li>
@@ -113,6 +114,7 @@
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="index.html">Español</a></li>
 										<li class="menu-item"><a href="English.html">English</a></li>
+                              <li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 									</ul>
 								</li>
 								
