--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 							<ul class="sub-menu">
 								<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
 								<li class="menu-item"><a href="English.html">English</a></li>
+								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
-							<a href="#">Páginas</a>
+							<a href="#">Preguntas</a>
 							<ul class="sub-menu">
 							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
 								<li class="menu-item"><a href="services.html">Services</a></li>-->
@@ -118,13 +119,14 @@
 								<li class="menu-item menu-item-has-children current-menu-item">
 									<a href="index.html">Home</a>
 									<ul class="sub-menu">
-										<li class="menu-item"><a href="index.html">Español</a></li>
-										<li class="menu-item current-menu-item"><a href="English.html">English</a></li>
+										<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
+										<li class="menu-item "><a href="English.html">English</a></li>
+										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 									</ul>
 								</li>
 								
 								<li class="menu-item menu-item-has-children">
-									<a href="#">Páginas</a>
+									<a href="#">Preguntas</a>
 									<ul class="sub-menu">
 							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
 								<li class="menu-item"><a href="services.html">Services</a></li>-->
@@ -164,7 +166,7 @@
 				<!--<p class="white">
 					¡Descubre las habilidades que puedes aprender con nosotros a continuación!
 				</p> -->
-				<p> <a href="contact.html" class="view-more more-white margin-t24">Contactar</a> <a href="English.html" class="view-more more-white margin-t24">English Site</a></p>
+				<p> <a href="contact.html" class="view-more more-white margin-t24">Contactar Ahora</a> <a href="English.html" class="view-more more-white margin-t24">English Site</a></p>
 				
 			</div>
 			<!-- /container-->
@@ -178,7 +180,7 @@
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Bienvenidos</h3>
 						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond' , serif;">A Escuela De Musica Jireh</h2>
-						<p style="font-family: 'Garamond', serif; font-size:large;">¡Bienvenidos a la Escuela de Música Jireh en el corazón de Glendale, Arizona, 
+						<p style="font-family: 'Garamond', serif; font-size:large;">"¡Bienvenidos a la Escuela de Música Jireh en el corazón de Glendale, Arizona, 
 							donde la música toma vida!<br> Nuestra pasión por la educación musical va más allá de lo 
 							convencional. Ofrecemos lecciones de piano y guitarra de alta calidad en tu vecindario. 
 							Descubre la armonía de la música con nosotros y comienza tu viaje musical hoy mismo.
