--- a/English.html
+++ b/English.html
@@ -71,7 +71,7 @@
 					<li><label>Address:</label> 5720 W Camelback rd,<br>
 						Glendale, Az 85301</li>
 					<li><label>Phone:</label>602-434-0670</li>
-					<li><label>Email:</label> BjazzJireh@Gmail.com </li>
+					<li><label>Email:</label> BetoRodriguez@EscuelaDeMusicaJirehAz.com </li>
 				</ul>
 				<!-- SOCIAL ICONS -->
 				<ul class="search-social search-social-2">
@@ -216,6 +216,8 @@
 							Saxophone, Trumpet, Clarinet, Tuba<br>
 							Drums, Congas, Bongos, Kettledrums<br>
 						Singing, Music Theory and more!</p>
+						<a href="./MusicaGallery.html" class="view-more margin-t36">View Gallery</a>
+					</div>
 					<!--	<a href="#" class="view-more margin-t36">Find More</a>-->
 					</div>
 					<!-- /col-md-6 -->
@@ -393,7 +395,7 @@
 						<div class="footer-content">
 							<h5>Contact Our Director:</h5>
 							<p>602-434-0670 <br/>
-								BjazzJireh@Gmail.com
+								BetoRodriguez@EscuelaDeMusicaJirehAz.com
 							</p>
 						</div>
 					</div>
