--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
                            <ul>
                               <li><label>Address:</label> 5720 W Camelback Rd. Glendale, Az 85301</li>
                               <li><label>Phone:</label> 602-434-0670</li>
-                              <li><label>Email:</label> BjazzJireh@gmail.com</li>
+                              <li><label>Email:</label> BetoRodriguez@EscuelaDeMusicaJirehAz.com</li>
                            </ul>
                            <div class="gmaps">
                               <iframe src= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6694713800407!2d-112.18490828444232!3d33.5099756535572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b134873eb6035%3A0xda5bcc2b2aaf79e0!2sEscuela%20De%20Musica%20JIREH%20-%20Music%20School!5e0!3m2!1sen!2sus!4v1673414706358!5m2!1sen!2sus" width="600" height="450" style="border:none;">
@@ -252,7 +252,7 @@
 						<div class="footer-content">
                      <h5>Contact Our Director:</h5>
                      <p>602-434-0670 <br/>
-                        BjazzJireh@Gmail.com
+                        BetoRodriguez@EscuelaDeMusicaJirehAz.com
                      </p>
                   </div>
                </div>
