--- a/faq.html
+++ b/faq.html
@@ -221,6 +221,31 @@
                            </div>
                         </div>
                      </li>
+					 <li>
+                        <h4 class="menu-title-section faq-title"><a href="#faq4">Does Playing An Instrument Improve Cognitive Ability?</a></h4>
+                        <div id="faq4" class="menu-section">
+                           <div class="menu-holder faq-holder">
+							<p>Learning music involves various cognitive processes, including memory,
+								 attention, and problem-solving.<strong> Here's a breakdown:</strong><br>
+
+								<strong> Memory:</strong> Playing an instrument requires memorization of notes, rhythms, 
+								 and patterns. This exercise enhances both short-term and long-term memory. <br>
+
+								 <strong>Attention and Concentration:</strong> Music demands sustained focus and concentration, 
+								 which can improve a child's attention span and ability to stay engaged in tasks.
+								 Reading sheet music and understanding musical theory involve analytical thinking. 
+								 Figuring out how to play a piece or improvising fosters problem-solving skills.<br>
+
+								 <strong>Creativity:</strong> Playing an instrument or composing music encourages creativity. It allows children 
+								 to express themselves artistically, fostering imagination and originality.<br>
+								 
+								 <strong> Emotional Expression:</strong> Music is a powerful medium for emotional expression. It helps children 
+								 recognize and convey emotions, contributing to their emotional intelligence.<br>
+								</p>
+                              
+                           </div>
+                        </div>
+                     </li>
 					<!-- <li>
                         <h4 class="menu-title-section faq-title"><a href="#faq4">researched question?</a></h4>
                         <div id="faq4" class="menu-section">
@@ -259,7 +284,7 @@
 							<div class="footer-content">
 								<h5>Contact Our Director:</h5>
 								<p>602-434-0670 <br/>
-									BjazzJireh@Gmail.com
+									BetoRodriguez@EscuelaDeMusicaJirehAz.com
 								</p>
 							</div>
 						</div>
