--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<li><label>Address:</label> 5720 W Camelback rd,<br>
 						Glendale, Az 85301</li>
 					<li><label>Phone:</label>602-434-0670</li>
-					<li><label>Email:</label> BjazzJireh@Gmail.com </li>
+					<li><label>Email:</label> BetoRodriguez@EscuelaDeMusicaJirehAz.com </li>
 				</ul>
 				<!-- SOCIAL ICONS -->
 				<ul class="search-social search-social-2">
@@ -222,8 +222,8 @@
 							Saxofón, Trompeta, Clarinete, Tuba,<br>
 							Batería, Congas, Bongos, Timbales,<br>
 							Canto, Teoría Musical y ¡Más!<p>
-						<!--<a href="#" class="view-more margin-t36">Find More</a>
-					</div>-->
+						<a href="./MusicaGallery.html" class="view-more margin-t36">Ver Fotos</a>
+					</div>
 					<!-- /col-md-6 -->
 				</div>
 				<!-- /row-->
@@ -399,7 +399,7 @@
 						<div class="footer-content">
 							<h5>Contacte Nuestro Director:</h5>
 							<p>602-434-0670 <br/>
-								BjazzJireh@Gmail.com
+								BetoRodriguez@EscuelaDeMusicaJirehAz.com
 							</p>
 						</div>
 					</div>
