--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -72,7 +72,7 @@
 					<li><label>Address:</label> 5720 W Camelback rd,<br>
 						Glendale, Az 85301</li>
 					<li><label>Phone:</label>602-434-0670</li>
-					<li><label>Email:</label> BjazzJireh@Gmail.com </li>
+					<li><label>Email:</label> BetoRodriguez@EscuelaDeMusicaJirehAz.com </li>
 				</ul>
 				<!-- SOCIAL ICONS -->
 				<ul class="search-social search-social-2">
@@ -358,7 +358,7 @@
                <div class="footer-content">
                   <h5>Contacte Nuestro Director:</h5>
                   <p>602-434-0670 <br/>
-                     BjazzJireh@Gmail.com
+                     BetoRodriguez@EscuelaDeMusicaJirehAz.com
                   </p>
                </div>
             </div>
