--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
 
 							</ul>
 						</div>
+						<div class="alert">
+							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+							Escuela Cerrada November 20th - 25th<br> Feliz Dia De Gracias!
+						  </div>
 						<!-- /MENU -->
 					</div>
 				</nav>
