--- a/English.html
+++ b/English.html
@@ -151,7 +151,12 @@
 
 
 							</ul>
+							
 						</div>
+						<div class="alert">
+							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+							School Closed November 20th - 25th<br> Happy ThanksGiving!
+						  </div>
 						<!-- /MENU -->
 					</div>
 				</nav>
