--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 							<ul class="sub-menu">
 								<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
 								<li class="menu-item"><a href="English.html">English</a></li>
-								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
 							<a href="#">Preguntas</a>
 							<ul class="sub-menu">
-							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
-								<li class="menu-item"><a href="services.html">Services</a></li>-->
+								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
+								<li class="menu-item"><a href="about-us.html">About Us</a></li>
+							<!--<li class="menu-item"><a href="services.html">Services</a></li>-->
 								<li class="menu-item"><a href="faq.html">Preguntas más frecuentes</a></li>
 							</ul>
 						
@@ -121,15 +121,15 @@
 									<ul class="sub-menu">
 										<li class="menu-item current-menu-item"><a href="index.html">Español</a></li>
 										<li class="menu-item "><a href="English.html">English</a></li>
-										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 									</ul>
 								</li>
 								
 								<li class="menu-item menu-item-has-children">
 									<a href="#">Preguntas</a>
 									<ul class="sub-menu">
-							<!--	<li class="menu-item"><a href="about-us.html">About Us</a></li>
-								<li class="menu-item"><a href="services.html">Services</a></li>-->
+										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
+										<li class="menu-item"><a href="about-us.html">About Us</a></li>
+									<!--<li class="menu-item"><a href="services.html">Services</a></li>-->
 										<li class="menu-item"><a href="faq.html">Preguntas más frecuentes</a></li>
 									</ul>
 								</li>
