--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
-							<a href="#">Preguntas</a>
+							<a href="#">Paginas</a>
 							<ul class="sub-menu">
 								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 								<li class="menu-item"><a href="about-us.html">About Us</a></li>
@@ -125,7 +125,7 @@
 								</li>
 								
 								<li class="menu-item menu-item-has-children">
-									<a href="#">Preguntas</a>
+									<a href="#">Paginas</a>
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 										<li class="menu-item"><a href="about-us.html">About Us</a></li>
