--- a/about-us.html
+++ b/about-us.html
@@ -202,14 +202,14 @@
 								<div class="team-img">
 									<img width="350" height="550"  src="images/teachers/Director.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Director">
 									<h4 style="font-family: 'Garamond', serif;"> Alberto 'Betito' Rodriguez</h4>
-									<p class="team-position">Director</p>
+									<p class="team-position"  >Director</p>
 									<ul class="team-details">
 										<li><span>Phone:</span> 602 &#8211; 434 &#8211; 0670</li>
 										<!--<li><span>Email:</span> BetoRodriguez@EscuelaDeMusicaJirehAz.com</li>-->
 									</ul>
-									<p>Inherited Music from Don Pascual Rodriguez of Los Bravos Del Llano De Durango,
+									<p>Inherited Music from his father, Don Pascual Rodriguez of Los Bravos Del Llano De Durango,
 										our director has more than 40 years of experience playing professionaly, recording in studio and teacher 
 										others. We are proud to state that our director has <b>Mastered Every Instrument We Teach!</b>
 									</p>
@@ -222,7 +222,7 @@
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Roberto.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Roberto">
 									<h4 style="font-family: 'Garamond', serif;">Roberto Hernandez</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -239,7 +239,7 @@
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Karime.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Karime">
 									<h4 style="font-family: 'Garamond', serif;">Karime Varela</h4>
 									<p class="team-position">Maestra</p>
 									<!--<ul class="team-details">
@@ -256,7 +256,7 @@
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Dayana.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Dayana">
 									<h4 style="font-family: 'Garamond', serif;">Dayana Varela</h4>
 									<p class="team-position">Maestra</p>
 									<!--<ul class="team-details">
@@ -277,7 +277,7 @@
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Juan.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="JP">
 									<h4 style="font-family: 'Garamond', serif;"> Juan Pablo Llamas</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -294,7 +294,7 @@
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Martin.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Martin">
 									<h4 style="font-family: 'Garamond', serif;">Martin A. Mendivil</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -311,7 +311,7 @@
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Ricardo.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="Ricardo">
 									<h4 style="font-family: 'Garamond', serif;">Ricardo Ledesma</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -328,7 +328,7 @@
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Jonathan.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content">
+								<div class="team-content" id="john">
 									<h4 style="font-family: 'Garamond', serif;">John Miranda</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
