--- a/about-us.html
+++ b/about-us.html
@@ -197,13 +197,13 @@
 					
 					
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-md-3" id="Alberto">
 							<div class="team-post">
 								<div class="team-img">
 									<img width="350" height="550"  src="images/teachers/Director.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content" id="Director">
-									<h4 style="font-family: 'Garamond', serif;"> Alberto 'Betito' Rodriguez</h4>
+								<div class="team-content" >
+									<h4 style="font-family: 'Garamond', serif;">Alberto 'Betito' Rodriguez</h4>
 									<p class="team-position"  >Director</p>
 									<ul class="team-details">
 										<li><span>Phone:</span> 602 &#8211; 434 &#8211; 0670</li>
@@ -217,12 +217,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="Roberto">
 							<div class="team-post">
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Roberto.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content" id="Roberto">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;">Roberto Hernandez</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -234,12 +234,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="Karime">
 							<div class="team-post">
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Karime.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content" id="Karime">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;">Karime Varela</h4>
 									<p class="team-position">Maestra</p>
 									<!--<ul class="team-details">
@@ -251,12 +251,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="Dayana">
 							<div class="team-post">
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Dayana.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content" id="Dayana">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;">Dayana Varela</h4>
 									<p class="team-position">Maestra</p>
 									<!--<ul class="team-details">
@@ -272,12 +272,12 @@
 					<!--end row-->
 					<!--Begin New Row-->
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-md-3" id="JP">
 							<div class="team-post">
 								<div class="team-img">
 									<img width="350" height="550" src="images/teachers/Juan.jpeg" loading="lazy" alt="" title="" /> 
 								</div>
-								<div class="team-content" id="JP">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;"> Juan Pablo Llamas</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -289,12 +289,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="Martin">
 							<div class="team-post">
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Martin.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content" id="Martin">
+								<div class="team-content" >
 									<h4 style="font-family: 'Garamond', serif;">Martin A. Mendivil</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -306,12 +306,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="Ricardo">
 							<div class="team-post">
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Ricardo.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content" id="Ricardo">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;">Ricardo Ledesma</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -323,12 +323,12 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
-						<div class="col-md-3">
+						<div class="col-md-3" id="john">
 							<div class="team-post">
 								<div class="team-img">
 								<img width="350" height="550" src="images/teachers/Jonathan.jpeg" loading="lazy" alt="" title="" />
 								</div>
-								<div class="team-content" id="john">
+								<div class="team-content">
 									<h4 style="font-family: 'Garamond', serif;">John Miranda</h4>
 									<p class="team-position">Maestro</p>
 									<!--<ul class="team-details">
@@ -340,6 +340,24 @@
 							</div>
 						</div>
 						<!-- col-md-3 --> 
+
+						<!--<div class="col-md-3" id="Israel">
+							<div class="team-post">
+								<div class="team-img">
+								<img width="350" height="550" src="images/teachers/Israel" loading="lazy" alt="" title="" />
+								</div>
+								<div class="team-content">
+									<h4 style="font-family: 'Garamond', serif;">Israel Blah</h4>
+									<p class="team-position">Maestro</p>-->
+									<!--<ul class="team-details">
+										<li><span>Phone:</span> 000 &#8211; 111 &#8211; 2222</li>
+										<li><span>Email:</span> mike@dina.com</li>
+									</ul>-->
+									<!--<p>insert</p>
+								</div>
+							</div>
+						</div>-->
+
 					</div>
 					<!--end row-->
 
