--- a/about-us.html
+++ b/about-us.html
@@ -210,7 +210,7 @@
 										<!--<li><span>Email:</span> BetoRodriguez@EscuelaDeMusicaJirehAz.com</li>-->
 									</ul>
 									<p>Inherited Music from his father, Don Pascual Rodriguez of Los Bravos Del Llano De Durango,
-										our director has more than 40 years of experience playing professionaly, recording in studio and teacher 
+										our director has more than 40 years of experience playing professionaly, recording in studio and teaching 
 										others. We are proud to state that our director has <b>Mastered Every Instrument We Teach!</b>
 									</p>
 								</div>
