update closed alert

--- a/English.html
+++ b/English.html
@@ -154,10 +154,10 @@
 							</ul>
 							
 						</div>
-						<div class="alert">
+						<!--<div class="alert">
 							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
 							School Closed November 20th - 25th<br> Happy ThanksGiving!
-						  </div>
+						  </div>-->
 						<!-- /MENU -->
 					</div>
 				</nav>
