--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</li>
 						<li class="menu-item menu-item-has-children">
-							<a href="#">Paginas</a>
+							<a href="#">Preguntas</a>
 							<ul class="sub-menu">
 								<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 								<li class="menu-item"><a href="about-us.html">About Us</a></li>
@@ -125,7 +125,7 @@
 								</li>
 								
 								<li class="menu-item menu-item-has-children">
-									<a href="#">Paginas</a>
+									<a href="#">Preguntas</a>
 									<ul class="sub-menu">
 										<li class="menu-item"><a href="MusicaGallery.html">Gallery</a></li>
 										<li class="menu-item"><a href="about-us.html">About Us</a></li>
@@ -152,10 +152,10 @@
 
 							</ul>
 						</div>
-						<div class="alert">
+					<!--	<div class="alert">
 							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
 							Escuela Cerrada November 20th - 25th<br> Feliz Dia De Gracias!
-						  </div>
+						  </div> -->
 						<!-- /MENU -->
 					</div>
 				</nav>
