--- a/English.html
+++ b/English.html
@@ -217,7 +217,7 @@
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Learn</h3>
 						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">to play any instrument</h2>
-						<p style="font-family: 'Garamond', serif; font-size: large;" >Guitar, Requinto Sierreno, Piano,<br>
+						<p style="font-family: 'Garamond', serif; font-size: large;" >Accordion, Guitar, Requinto Sierreno, Piano,<br>
 							Violin, Cello, Bass, Ukulele, Mandolin<br>
 							Saxophone, Trumpet, Clarinet, Tuba<br>
 							Drums, Congas, Bongos, Kettledrums<br>
