--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 					<div class="col-md-6">
 						<h3 class="home-subtitle">Aprende</h3>
 						<h2 class="home-title margin-b24 title-headline" style="font-family: 'Garamond', serif;">A Tocar </h2>
-						<p style="font-family: 'Garamond', serif; font-size:large">Guitarra, Requinto Sierreno,<br>
+						<p style="font-family: 'Garamond', serif; font-size:large">Acordeon, Guitarra, Requinto Sierreno,<br>
 							 Piano, Violín, Cello, Bajo, Ukulele, Mandolina,<br>
 							Saxofón, Trompeta, Clarinete, Tuba,<br>
 							Batería, Congas, Bongos, Timbales,<br>
