--- a/faq.html
+++ b/faq.html
@@ -183,7 +183,7 @@
 						
 							<h3>The Most Asked Questions</h3>
 						
-						<p>At our music school, we understand that embarking on a musical journey is a significant decision,
+						<p>At Escuela De Musica Jireh, we understand that embarking on a musical journey is a significant decision,
 							 and we're here to support you every step of the way. Whether you're a complete beginner, an aspiring
 							 virtuoso, or someone looking to explore the world of music, we offer a diverse range of instrumental
 							 and vocal lessons, group courses, and music theory classes to suit your individual interests and skill level.
@@ -209,9 +209,8 @@
                         <h4 class="menu-title-section faq-title"><a href="#faq1">What types of music lessons do you offer?</a></h4>
                         <div id="faq1" class="menu-section">
                            <div class="menu-holder faq-holder">
-							<p>At our music school, we provide a wide range of instrumental lessons, including guitar, piano, violin, and more. 
-								Additionally, we offer comprehensive singing courses, group lessons, 
-								and music theory classes. Our diverse offerings cater to a variety of musical interests and skill levels.</p>
+							<p>We provide a wide range of instrumental lessons, including guitar, piano, accordion, drums, saxophone, clarinet, tuba, trumpet violin, and more! 
+								Additionally, we offer high quality education in music theory. Our students learn to read and write music as well as playing the songs they like.</p>
                            </div>
                         </div>
                      </li>
@@ -219,11 +218,7 @@
                         <h4 class="menu-title-section faq-title"><a href="#faq2">Do you offer trial lessons or have any age restrictions for students?</a></h4>
                         <div id="faq2" class="menu-section">
                            <div class="menu-holder faq-holder">
-							<p>We are delighted to offer a complimentary first class for prospective students, allowing them to experience 
-								our teaching style and facilities firsthand. At our music school, there are no age restrictions, 
-								and we welcome students of all ages and skill levels. Whether you're a beginner taking your first steps in 
-								music or an advanced musician looking to hone your skills, our dedicated instructors are here to support your
-								 musical journey</p>
+							<p>We offer classes for all ages! All students recieve a free complimentary class to help them decide on the instrument they would like as well as getting to know their future experienced teacher!</p>
                         	 </div>
                         </div>
                      </li>
