--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 							<span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
 							Escuela Cerrada November 20th - 25th<br> Feliz Dia De Gracias!
 						  </div> -->
-						  
+
 						<!-- /MENU -->
 					</div>
 				</nav>
@@ -215,7 +215,7 @@
 				<div class="row margin-b72">
 					<div class="col-md-6 mobile-margin-b54">
 						<div class="margin-r54">
-							<iframe width="420" height="345" src="https://youtube.com/embded/XCtfLKorbHM?si=yq-ZROetb8CiAdJf"  frameborder="0" allowfullscreen></iframe>
+							<iframe width="420" height="345" src="https://youtube.com/embed/XCtfLKorbHM?si=yq-ZROetb8CiAdJf"  frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 					<!-- /col-md-6 -->
