--- a/MusicaGallery.html
+++ b/MusicaGallery.html
@@ -201,7 +201,7 @@
                         </div>
                         
                   <!-- Video Embed -->
-                  <div class="menu-post gallery-post">
+                  <div >
                      <div class="item-content-bkg gallery-bkg">
                         <iframe width="473" height="840" src="https://www.youtube.com/embed/ce0gEFN10J4" 
                            title="Tu boda y rubicon - Escuela De Musica Jireh" frameborder="0" 
